# gmod-linux-casefix

./: CMakeLists.txt  README.md
src/common/: casefix_debug.h  casefix_log.cpp  casefix_log.h  casefix_target.h
src/hook/: casefix_elf.cpp  casefix_elf.h  casefix_shim.cpp
src/patcher/: elf_patch.cpp  elf_patch.h  main.cpp
src/resolve/: casefix_path.cpp  casefix_path.h
